Add support for cookies placeholder
